Вот вроде бы все сделал.

--- a/reader/source/carriercompany2/carriercompany2.csproj
+++ b/reader/source/carriercompany2/carriercompany2.csproj
@@ -68,6 +68,11 @@
     <Compile Include="BLLS\StaffBll.cs" />
     <Compile Include="BLLS\TransportBll.cs" />
     <Compile Include="BLLS\TruckingBll.cs" />
+    <Compile Include="carriercompanyDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>carriercompanyDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="DALS\Dal.cs" />
     <Compile Include="DALS\DriversDal.cs" />
     <Compile Include="DALS\StaffDal.cs" />
@@ -102,6 +107,18 @@
     <EmbeddedResource Include="SelectionsForm.resx">
       <DependentUpon>SelectionsForm.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="app.config" />
+    <None Include="carriercompanyDataSet.xsc">
+      <DependentUpon>carriercompanyDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="carriercompanyDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>carriercompanyDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="carriercompanyDataSet.xss">
+      <DependentUpon>carriercompanyDataSet.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
