add launcher, new icons, fix editor position

--- a/release/editor.exe.config
+++ b/release/editor.exe.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="_editor.My.MySettings.carriercompanyConnectionString"
-            connectionString="Data Source=NORMANDY;Initial Catalog=carriercompany;Integrated Security=True"
+            connectionString="Data Source=KRAYUD-ПК\MESSAP;Initial Catalog=carriercompany;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup>
